--- a/docs/src/app.css
+++ b/docs/src/app.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	@font-face {
+		font-family: 'Epilogue';
+		src: url('/fonts/Epilogue-VariableFont_wght.ttf') format('truetype');
+	}
+
+	@font-face {
+		font-family: 'BrushScript';
+		src: url('/fonts/BrushScriptOpti-Regular.otf') format('opentype');
+	}
+}
+
+@layer components {
+	.fade-bg {
+		background: linear-gradient(75deg, rgb(0, 0, 0, 0.7), transparent 70%);
+	}
+
+	.normal-mask {
+		mask-image: linear-gradient(195deg, rgba(0, 0, 0) 65%, transparent 71%);
+	}
+
+	.big-mask {
+		mask-image: linear-gradient(195deg, rgba(0, 0, 0) 60%, transparent 65%);
+	}
+
+	.bright-mask {
+		filter: brightness(0.9);
+	}
+
+	.dim-mask {
+		filter: brightness(0.7);
+	}
+}
